--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
    <!--  -->
    <script defer src=" https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
     <!-- CSS -->
-    <link rel="stylesheet" href="/CSS/general.css" >
-    <link rel="stylesheet" href="/CSS/style.css" >
-    <link rel="stylesheet" href="/CSS/queries.css">
+    <link rel="stylesheet" href="./CSS/general.css" >
+    <link rel="stylesheet" href="./CSS/style.css" >
+    <link rel="stylesheet" href="./CSS/queries.css">
    
     <title>Omnifood &mdash; Never cook again</title>
   </head>
   <body>
     <header class="header sticky">
       <a href="#">
-        <img src="/img/omnifood-logo.png" class="logo" alt="logo" >
+        <img src="./img/omnifood-logo.png" class="logo" alt="logo" >
       </a>
       <nav class="main-nav">
         <ul class="main-nav-list">
@@ -73,12 +73,12 @@
             <a href="#how" class="btn btn-outline">Learn more &darr;</a>
             <div class="delivered-meals">
               <div class="delivered-imgs">
-                <img src="/img/customers/customer-1.jpg" alt="customer img" >
-                <img src="/img/customers/customer-2.jpg" alt="customer img" >
-                <img src="/img/customers/customer-3.jpg" alt="customer img" >
-                <img src="/img/customers/customer-4.jpg" alt="customer img" >
-                <img src="/img/customers/customer-5.jpg" alt="customer img" >
-                <img src="/img/customers/customer-6.jpg" alt="customer img" >
+                <img src="./img/customers/customer-1.jpg" alt="customer img" >
+                <img src="./img/customers/customer-2.jpg" alt="customer img" >
+                <img src="./img/customers/customer-3.jpg" alt="customer img" >
+                <img src="./img/customers/customer-4.jpg" alt="customer img" >
+                <img src="./img/customers/customer-5.jpg" alt="customer img" >
+                <img src="./img/customers/customer-6.jpg" alt="customer img" >
               </div>
               <p class="delivered-text">
                 <span>250,000+</span> delivered meals last year!
@@ -92,7 +92,7 @@
               type="image/webp" />
               
             <source srcset="img/hero-min.png" type="image/png" >
-            <img src="/img/hero.webp" class="hero-img" alt="woman enjoying food" >  
+            <img src="./img/hero.webp" class="hero-img" alt="woman enjoying food" >  
           </picture>
           </div>
         </div>
@@ -102,11 +102,11 @@
         <div class="container">
           <h2 class="heading-featured-in">As featured in</h2>
           <div class="logos">
-            <img src="/img/logos/techcrunch.png" alt="" >
-            <img src="/img/logos/business-insider.png" alt="" >
-            <img src="/img/logos/the-new-york-times.png" alt="" >
-            <img src="/img/logos/forbes.png" alt="" >
-            <img src="/img/logos/usa-today.png" alt="" >
+            <img src="./img/logos/techcrunch.png" alt="" >
+            <img src="./img/logos/business-insider.png" alt="" >
+            <img src="./img/logos/the-new-york-times.png" alt="" >
+            <img src="./img/logos/forbes.png" alt="" >
+            <img src="./img/logos/usa-today.png" alt="" >
           </div>
         </div>
       </section>
@@ -137,7 +137,7 @@
 
           <div class="step-img-box">
             <img
-              src="/img/app/app-screen-1.png"
+              src="./img/app/app-screen-1.png"
               alt="Iphone app preferences selection screen"
               class="step-img"
             />
@@ -146,7 +146,7 @@
           <!-- STEP 02 -->
           <div class="step-img-box">
             <img
-              src="/img/app/app-screen-2.png"
+              src="./img/app/app-screen-2.png"
               alt="iphone app meal approving plan Screen"
               class="step-img"
             />
@@ -176,7 +176,7 @@
 
           <div class="step-img-box">
             <img
-              src="/img/app/app-screen-3.png"
+              src="./img/app/app-screen-3.png"
               alt="iphone app  screen"
               class="step-img"
             />
@@ -198,7 +198,7 @@
           <!-- MEAL-1 -->
           <div class="meal">
             <img
-              src="/img/meals/meal-1.jpg"
+              src="./img/meals/meal-1.jpg"
               alt=" Japanese Gyozas"
               class="meal-img"
             />
@@ -237,7 +237,7 @@
           <!-- MEAL-2 -->
           <div class="meal">
             <img
-              src="/img/meals/meal-2.jpg"
+              src="./img/meals/meal-2.jpg"
               alt=" Avocado Salad"
               class="meal-img"
             />
@@ -320,7 +320,7 @@
             <!-- CUSTOMER-1 -->
             <figure class="testimonial">
               <img
-                src="/img/customers/dave.jpg"
+                src="./img/customers/dave.jpg"
                 class="testimonial-img"
                 alt="dAVE"
               />
@@ -333,7 +333,7 @@
             <!-- CUSTOMER-2 -->
             <figure class="testimonial">
               <img
-                src="/img/customers/ben.jpg"
+                src="./img/customers/ben.jpg"
                 class="testimonial-img"
                 alt="Steve"
               />
@@ -347,7 +347,7 @@
             <!-- CUSTOMER-3 -->
             <figure class="testimonial">
               <img
-                src="/img/customers/steve.jpg"
+                src="./img/customers/steve.jpg"
                 class="testimonial-img"
                 alt="Steve"
               />
@@ -360,7 +360,7 @@
             <!-- CUSTOMER-4 -->
             <figure class="testimonial">
               <img
-                src="/img/customers/hannah.jpg"
+                src="./img/customers/hannah.jpg"
                 class="testimonial-img"
                 alt="Hannah Smith"
               />
@@ -375,13 +375,13 @@
         <!-- GALLERY -->
         <div class="gallery">
           <figure class="gallery-item">
-            <img src="/img/gallery/gallery-1.jpg" alt="photo of food" />
+            <img src="./img/gallery/gallery-1.jpg" alt="photo of food" />
           </figure>
           <figure class="gallery-item">
             <img src="/img/gallery/gallery-2.jpg" alt="photo of food" />
           </figure>
           <figure class="gallery-item">
-            <img src="/img/gallery/gallery-3.jpg" alt="photo of food" />
+            <img src="./img/gallery/gallery-3.jpg" alt="photo of food" />
           </figure>
           <figure class="gallery-item">
             <img src="/img/gallery/gallery-4.jpg" alt="photo of food" />
@@ -390,25 +390,25 @@
             <img src="/img/gallery/gallery-5.jpg" alt="photo of food" />
           </figure>
           <figure class="gallery-item">
-            <img src="/img/gallery/gallery-6.jpg" alt="photo of food" />
+            <img src="./img/gallery/gallery-6.jpg" alt="photo of food" />
           </figure>
           <figure class="gallery-item">
-            <img src="/img/gallery/gallery-7.jpg" alt="photo of food" />
+            <img src="./img/gallery/gallery-7.jpg" alt="photo of food" />
           </figure>
           <figure class="gallery-item">
-            <img src="/img/gallery/gallery-8.jpg" alt="photo of food" />
+            <img src="./img/gallery/gallery-8.jpg" alt="photo of food" />
           </figure>
           <figure class="gallery-item">
-            <img src="/img/gallery/gallery-9.jpg" alt="photo of food" />
+            <img src="./img/gallery/gallery-9.jpg" alt="photo of food" />
           </figure>
           <figure class="gallery-item">
-            <img src="/img/gallery/gallery-10.jpg" alt="photo of food" />
+            <img src="./img/gallery/gallery-10.jpg" alt="photo of food" />
           </figure>
           <figure class="gallery-item">
-            <img src="/img/gallery/gallery-11.jpg" alt="photo of food" />
+            <img src="./img/gallery/gallery-11.jpg" alt="photo of food" />
           </figure>
           <figure class="gallery-item">
-            <img src="/img/gallery/gallery-12.jpg" alt="photo of food" />
+            <img src="./img/gallery/gallery-12.jpg" alt="photo of food" />
           </figure>
         </div>
       </section>
