--- a/index.html
+++ b/index.html
@@ -378,16 +378,16 @@
             <img src="./img/gallery/gallery-1.jpg" alt="photo of food" />
           </figure>
           <figure class="gallery-item">
-            <img src="/img/gallery/gallery-2.jpg" alt="photo of food" />
+            <img src="./img/gallery/gallery-2.jpg" alt="photo of food" />
           </figure>
           <figure class="gallery-item">
             <img src="./img/gallery/gallery-3.jpg" alt="photo of food" />
           </figure>
           <figure class="gallery-item">
-            <img src="/img/gallery/gallery-4.jpg" alt="photo of food" />
+            <img src="./img/gallery/gallery-4.jpg" alt="photo of food" />
           </figure>
           <figure class="gallery-item">
-            <img src="/img/gallery/gallery-5.jpg" alt="photo of food" />
+            <img src="./img/gallery/gallery-5.jpg" alt="photo of food" />
           </figure>
           <figure class="gallery-item">
             <img src="./img/gallery/gallery-6.jpg" alt="photo of food" />
@@ -583,7 +583,7 @@
       <div class="container grid grid--footer">
         <div class="logo-col">
           <a href="#" class="footer-logo">
-            <img src="/img/omnifood-logo.png" class="logo" alt="logo" />
+            <img src="./img/omnifood-logo.png" class="logo" alt="logo" />
           </a>
 <ul class="social-links">
   <li><a href="#" class="footer-link"><i class="fa-brands fa-instagram social-icon"></i></a></li>
